wordpress/wp-content/themes/ripple/assets/less/wordpress.less
/* ... */
//Additional adjustments
.mm_get_in_touch {
	margin: 0 0 20px 0;
}

span.num_transactions, span.volume_traded {
color: #fff;
font-size: 2.4rem;
font-weight: 300;
}

.entry-content ul li ul li {
list-style: circle outside none !important;
margin-left: 18px;
}

.learn_more {
	color: @blue;
	position: relative;
	top:15px;
	font-size: 1.2em;
}

//Additional Blog Adjustments
.blog .transaction-feed {display:none;}

.blog .entry-content a {
	color: @blue;
}

.blog .entry-content img {
max-width: 100%;
}

.blog .logo img {
	max-width:100%;
}

.market-makers .contact_us a:hover, .page-id-2581 .contact_us a:hover {
	color: #fff;
}

